--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-line-graph": "^1.",
+    "react-moment": "^1.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-vis": "^1.11.7",
     "recharts": "^2.1.12",
     "web-vitals": "^2.1.4"
   },
