--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-weathe-app",
+  "homepage": "https://amanullah21.github.io/weather-web-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,9 +14,6 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-line-graph": "^1.",
-    "react-moment": "^1.1.2",
-    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-vis": "^1.11.7",
     "recharts": "^2.1.12",
@@ -25,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
