--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-autocomplete-input": "^1.0.18",
+    "react-autosuggest": "^10.1.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
