--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apexcharts": "^1.4.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-location-picker": "^1.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
