--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [16.x, 18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -28,6 +28,6 @@ jobs:
         cache: 'npm'
         
     - run: npx update-browserslist-db@latest
-    - run: npm ci
+    - run: npm i
     - run: npm run build --if-present
-    - run: start
+    - run: npm run start
